<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:clickable="false"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="ScrollViewSize" >

            <Button
                android:id="@+id/button1"
                style="@style/customButton"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@android:color/darker_gray"
                android:onClick="onClickButtonStart"
                android:text="@string/startRecord" />

            <Button
                android:id="@+id/button2"
                style="@style/customButton"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:onClick="onClickButtonStop"
                android:text="@string/stopRecord" />

            <Button
                android:id="@+id/button3"
                style="@style/customButton"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:onClick="onClickButtonMyCoordinats"
                android:text="@string/my_coordinats" />

            <Button
                android:id="@+id/button4"
                style="@style/customButton"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:onClick="onClickButtonAnotherCoordinats"
                android:text="@string/another_coordinats" />

            <Button
                android:id="@+id/button5"
                style="@style/customButton"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:onClick="onClickButtonSettings"
                android:text="@string/settings" />

            <Button
                android:id="@+id/button6"
                style="@style/customButton"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="onClickButtonGetMeCoordinats"
                android:text="@string/get_parametrs" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>